ecmascript/parser/tests/typescript-errors/custom/issue-380/input.ts.stderr
error: Unexpected token `.`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/custom/issue-380/input.ts:3:16
  |
3 |         import(../foo/bar)
  |                ^

error: Expected ,, got .
 --> $DIR/tests/typescript-errors/custom/issue-380/input.ts:3:16
  |
3 |         import(../foo/bar)
  |                ^

error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/custom/issue-380/input.ts:3:16
  |
3 |         import(../foo/bar)
  |                ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/custom/issue-380/input.ts:3:16
  |
3 |         import(../foo/bar)
  |                ^

